# mkdocs-material-footer-tags

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
src/mkdocs_material_footer_tags/: __init__.py
