[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mkdocs-material-footer-tags"
version = "0.1.0"
description = "Injects a 'Related pages' footer into Material for MkDocs. Ranks similar pages by Jaccard tag similarity, shows breadcrumbs, and highlights shared tags."
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Ruan E. Formigoni", email = "ruanformigoni@gmail.com"}]
requires-python = ">=3.9"
dependencies = [
  "mkdocs>=1.4",
  "mkdocs-material>=9.0",
  "pyyaml>=5.0",
]
keywords = [
  "mkdocs",
  "mkdocs-plugin",
  "mkdocs-material",
  "material-for-mkdocs",
  "tags",
  "tagging",
  "related-pages",
  "see-also",
  "similar-pages",
  "recommendations",
  "cross-links",
  "footer",
  "breadcrumbs",
  "jaccard",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: MkDocs",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/ruanformigoni/mkdocs-material-footer-tags"
Source = "https://github.com/ruanformigoni/mkdocs-material-footer-tags"

[project.entry-points."mkdocs.plugins"]
mkdocs-material-footer-tags = "mkdocs_material_footer_tags:MaterialFooterTagsPlugin"

[tool.setuptools.packages.find]
where = ["src"]
